--- a/.github/workflows/webserver_creation.yaml
+++ b/.github/workflows/webserver_creation.yaml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Setup Terraform CLI
         uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: "1.1.7"
       - name: Setup AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
