--- a/.github/workflows/webserver_creation.yaml
+++ b/.github/workflows/webserver_creation.yaml
@@ -53,6 +53,7 @@ jobs:
       run: aws s3 cp .terraform.lock.hcl s3://${{ inputs.bucket_name }}
 
   install_nginx:
+    needs: create
     runs-on: ubuntu-latest
     steps:
     - name: Install Nginx by Ansible
