--- a/.github/workflows/webserver_creation.yaml
+++ b/.github/workflows/webserver_creation.yaml
@@ -56,6 +56,8 @@ jobs:
     needs: create
     runs-on: ubuntu-latest
     steps:
+    - name: Repository checkout
+      uses: actions/checkout@v4
     - name: Install Nginx by Ansible
       env:
         SSH_AUTH_SOCK: /tmp/ssh_agent.sock
