--- a/.github/workflows/webserver_creation.yaml
+++ b/.github/workflows/webserver_creation.yaml
@@ -58,6 +58,15 @@ jobs:
     steps:
     - name: Repository checkout
       uses: actions/checkout@v4
+    - name: Add SSH key
+      env:
+        SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+      run: |
+        mkdir -p /home/runner/.ssh
+        echo "${{ secrets.EC2_PRIVATE_KEY }}" > /home/runner/.ssh/id_rsa
+        chmod 600 /home/runner/.ssh/id_rsa
+        ssh-agent -a $SSH_AUTH_SOCK > /dev/null	
+        ssh-add /home/runner/.ssh/id_rsa  
     - name: Install Nginx by Ansible
       env:
         SSH_AUTH_SOCK: /tmp/ssh_agent.sock
