--- a/.github/workflows/webserver_creation.yaml
+++ b/.github/workflows/webserver_creation.yaml
@@ -70,6 +70,6 @@ jobs:
       env:
         SSH_AUTH_SOCK: /tmp/ssh_agent.sock
       
-      run: ansible-playbook -i inventory install_nginx.yaml
+      run: ls -lha
     - name: Upload .terraform.lock.hcl
       run: aws s3 cp .terraform.lock.hcl s3://${{ inputs.bucket_name }}
