--- a/.github/workflows/webserver_separate_creation.yaml
+++ b/.github/workflows/webserver_separate_creation.yaml
@@ -42,6 +42,7 @@ jobs:
       run: terraform apply --auto-approve
       
   install_nginx:
+    needs: create
     runs-on: ubuntu-latest
     steps:
     - name: Add SSH key
