--- a/.github/workflows/webserver_separate_creation.yaml
+++ b/.github/workflows/webserver_separate_creation.yaml
@@ -8,7 +8,7 @@ on:
         description: "aws region"
         type: string
         required: true
-        default: us-east-2
+        default: ap-southeast-1
       bucket_name:
         description: "bucket name"
         type: string
