--- a/.github/workflows/webserver_separate_creation.yaml
+++ b/.github/workflows/webserver_separate_creation.yaml
@@ -57,6 +57,10 @@ jobs:
         ansible_tower_pass: ${{ secrets.ansiblePass }}
         ansible_tower_url: ${{ secrets.ansibleUrl }}
         job_template_id: "9"
+        extra_vars: |
+          {
+          
+          }
     
   install_nginx:
     needs: [create, run_helloworld] 
