--- a/.github/workflows/webserver_separate_creation.yaml
+++ b/.github/workflows/webserver_separate_creation.yaml
@@ -59,7 +59,7 @@ jobs:
         job_template_id: "9"
         extra_vars: |
           {
-          
+            "hosts": "ec2-18-140-173-169.ap-southeast-1.compute.amazonaws.com"
           }
     
   install_nginx:
