--- a/.github/workflows/create_server_on_aws.yaml
+++ b/.github/workflows/create_server_on_aws.yaml
@@ -1,6 +1,15 @@
 name: Create server on AWS
 run-name: Create Server on AWS
 
+
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+
 jobs:
 
         
