--- a/.github/workflows/create_server_on_aws.yaml
+++ b/.github/workflows/create_server_on_aws.yaml
@@ -16,13 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Triger Job Template no AAP
-      uses: bilalahmad99/github-action-trigger-awx@1.1.0
+      uses: bilalahmad99/github-action-trigger-awx@latest
       with:
         ansible_tower_user: ${{ secrets.ansibleUser }}
         ansible_tower_pass: ${{ secrets.ansiblePass }}
         ansible_tower_url: ${{ secrets.ansibleUrl }}
         workflow_template_id: "17"
-        extra_vars: |
-         {
-
-         }
