--- a/.github/workflows/create_server_on_aws.yaml
+++ b/.github/workflows/create_server_on_aws.yaml
@@ -21,4 +21,4 @@ jobs:
         ansible_tower_user: ${{ secrets.ansibleUser }}
         ansible_tower_pass: ${{ secrets.ansiblePass }}
         ansible_tower_url: ${{ secrets.ansibleUrl }}
-        workflow_template_id: "17"
+        workflow_template_id: '17'
